--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "program_guide_tvmaze_api"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-reqwest = { version = "0.10.4",  features = ["blocking"] }
-serde_json = "1.0.48"
+config = "0.10"
+env_logger = "0.7"
+exitcode = "1.1"
+log = "0.4"
 mysql = "18.0.0"
-quote = "=1.0.2"
-#docopt = "1.1.0"
-serde = { version = "1.0.104", features = ["derive"] }
+reqwest = { version = "0.10", features = ["blocking", "json", "gzip"] }
+structopt = "0.3"
+serde = { version = "1.0", features = ["derive"] }
